// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Component) Modal (Render) while hidden matches snapshot 1`] = `""`;

exports[`(Component) Modal (Render) willHidden after hide matches snapshot 1`] = `
<span>
  <span
    className="willHidden"
  >
    <div
      className="backdrop"
      onClick={[Function]}
    />
    <div
      className="modal"
    >
      <div
        className="modal-container"
      >
        <MockContent />
      </div>
    </div>
  </span>
</span>
`;

exports[`(Component) Modal (Render) with content after show matches snapshot 1`] = `
<span>
  <span
    className=""
  >
    <div
      className="backdrop"
      onClick={[Function]}
    />
    <div
      className="modal"
    >
      <div
        className="modal-container"
      >
        <MockContent />
      </div>
    </div>
  </span>
</span>
`;
